<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/logIn_ProgressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" android:layout_marginEnd="411dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="411dp"
            android:layout_marginBottom="731dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="731dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/logIn_phone"
            android:layout_width="150dp"
            android:layout_height="26dp"
            android:id="@+id/logIn_loginText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/logIn_loginEdit"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.623"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.157"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:text=""
            android:ems="10"
            android:maxLength="11"
            android:id="@+id/logIn_loginEdit"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/logIn_loginText"
    />
    <TextView
            android:text="@string/logIn_password"
            android:layout_width="70dp"
            android:layout_height="22dp"
            android:id="@+id/logIn_passwordText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/logIn_passwordEdit"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/logIn_loginEdit"
            app:layout_constraintHorizontal_bias="0.4"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text=""
            android:ems="10"
            android:id="@+id/logIn_passwordEdit"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/logIn_passwordText"/>


    <Button style="@style/defaultBtn"
            android:text="@string/logIn_logInBtn"
            android:layout_width="193dp"
            android:layout_height="47dp"
            android:id="@+id/logIn_logInBtn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/logIn_passwordEdit"
            app:layout_constraintHorizontal_bias="0.45" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent">
    </Button>

    <ImageView
            android:layout_width="92dp"
            android:layout_height="96dp"
            app:srcCompat="@raw/ic_vk"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>